--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.25.0",
     "dotenv": "^14.3.2",
     "env-cmd": "^10.1.0",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
